# kunpengzhi-ai

./: .env.example  .gitignore  .gitlab-ci.yml  AGENT.md  README.md  app.py  arena.py  chainlit.md  main.py  mem0-switch-record.md  mem_ops_api.py  openclaw-remote.txt  openclaw.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.2  openclaw.json.bak.3  openclaw.json.bak.4  openclaw.json.last-good  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  test_full_system.py  test_oci_heatwave.py  test_real_vec.py  test_tts.py
.chainlit/: config.toml
.streamlit/: config.toml
completions/: openclaw.bash  openclaw.fish  openclaw.ps1  openclaw.zsh
core/: config.py  database.py  embeddings.py  graph_rag.py  retriever.py  search.py  utils.py  vectorize.py
debate/: __init__.py  engine.py  modern_engine.py
devices/: paired.json
docs/: burn-5000-plan.md  hierarchy-plan.md  whatif-analysis.md
flows/: registry.sqlite-shm  registry.sqlite-wal
graphrag_project/: graphrag_agent.py  import_kunpengzhi.py  setup_vector_rag.sql
identity/: device-auth.json
kunpengzhi_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
npm/: package-lock.json  package.json
pages/: 1_记忆银行.py  2_实时数据.py  3_八仙辩论_Demo.py  4_链上确权.py
plugin-skills/: browser-automation  feishu-bitable  feishu-calendar  feishu-channel-rules  feishu-create-doc  feishu-doc  feishu-drive  feishu-fetch-doc  feishu-im-read  feishu-lark-cli  feishu-perm  feishu-task  feishu-troubleshoot  feishu-update-doc  feishu-wiki
plugins/: installs.json
public/: custom.css  custom.js  (+2 more)
(+98 files in other folders)
