[project]
name = "kunpengzhi-ai"
version = "0.1.0"
description = "基于 Chainlit + AutoGen 的 4v4 智能辩论系统，集成 Wiki.js 知识库"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.0",
    "pyautogen>=0.10.0",
    "autogen-ext[openai]>=0.7.5",
    "graphrag>=0.5.0",
    "python-dotenv>=1.0.1",
    "openai>=1.58.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.10",
    "mysql-connector-python>=9.1.0",
    "tiktoken>=0.8.0",
]
