[project]
name = "kunpengzhi-ai"
version = "2.0.0"
description = "鲲鹏志 AI 辩论系统 — 4v4 大专辩论会 + 讲茶大堂 + 微软 TTS"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=1.3.0",
    "pyautogen>=0.2.33",
    "autogen-ext[openai]>=0.7.5",
    "python-dotenv>=1.0.1",
    "openai>=1.58.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.10",
    "edge-tts>=6.1.0",
    "pymongo>=4.17.0",
]
