[project]
name = "kunpengzhi-ai"
version = "2.0.0"
description = "鲲鹏志 AI 辩论系统 — 4v4 大专辩论会 + 讲茶大堂 + 微软 TTS"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.38.0",
    "chainlit>=1.3.0",
    "pyautogen>=0.2.33",
    "autogen-ext[openai]>=0.7.5",
    "python-dotenv>=1.0.1",
    "openai>=1.58.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.10",
    "mysql-connector-python>=9.1.0",
    "tiktoken>=0.8.0",
    "voyageai>=0.2.0",
    "pyjwt>=2.9.0",
]

[tool.setuptools]
packages = ["core", "debate", "graphrag_project"]

[tool.uv]
managed = true
